fix: change get first to get 0 due to java versions